--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -809,29 +809,7 @@
                   </property>
                  </widget>
                 </item>
-                <item row="3" column="9" alignment="Qt::AlignHCenter">
-                 <widget class="QSpinBox" name="NumLabelStart">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
-                  </property>
-                  <property name="toolTip">
-                   <string/>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                  </property>
-                  <property name="buttonSymbols">
-                   <enum>QAbstractSpinBox::UpDownArrows</enum>
-                  </property>
-                  <property name="maximum">
-                   <number>100</number>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="8" alignment="Qt::AlignHCenter">
+                <item row="1" column="9" alignment="Qt::AlignHCenter">
                  <widget class="QLabel" name="numLabel">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -883,15 +861,15 @@
                    </font>
                   </property>
                   <property name="text">
-                   <string>Start number</string>
+                   <string>Start #</string>
                   </property>
                   <property name="buddy">
-                   <cstring>NumLabelStart</cstring>
+                   <cstring>NodeNumLabelStart</cstring>
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="8" colspan="2" alignment="Qt::AlignHCenter">
-                 <widget class="QCheckBox" name="NumLabelCheckBox">
+                <item row="2" column="8" alignment="Qt::AlignHCenter">
+                 <widget class="QCheckBox" name="NodeNumLabelCheckBox">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -952,6 +930,115 @@
                   </property>
                   <property name="tristate">
                    <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="8" alignment="Qt::AlignHCenter">
+                 <widget class="QCheckBox" name="EdgeNumLabelCheckBox">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="palette">
+                   <palette>
+                    <active>
+                     <colorrole role="WindowText">
+                      <brush brushstyle="SolidPattern">
+                       <color alpha="255">
+                        <red>103</red>
+                        <green>103</green>
+                        <blue>103</blue>
+                       </color>
+                      </brush>
+                     </colorrole>
+                    </active>
+                    <inactive>
+                     <colorrole role="WindowText">
+                      <brush brushstyle="SolidPattern">
+                       <color alpha="255">
+                        <red>103</red>
+                        <green>103</green>
+                        <blue>103</blue>
+                       </color>
+                      </brush>
+                     </colorrole>
+                    </inactive>
+                    <disabled>
+                     <colorrole role="WindowText">
+                      <brush brushstyle="SolidPattern">
+                       <color alpha="255">
+                        <red>120</red>
+                        <green>120</green>
+                        <blue>120</blue>
+                       </color>
+                      </brush>
+                     </colorrole>
+                    </disabled>
+                   </palette>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <pointsize>11</pointsize>
+                    <strikeout>false</strikeout>
+                   </font>
+                  </property>
+                  <property name="focusPolicy">
+                   <enum>Qt::TabFocus</enum>
+                  </property>
+                  <property name="layoutDirection">
+                   <enum>Qt::LeftToRight</enum>
+                  </property>
+                  <property name="text">
+                   <string>Number edges</string>
+                  </property>
+                  <property name="tristate">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="9" alignment="Qt::AlignHCenter">
+                 <widget class="QSpinBox" name="NodeNumLabelStart">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="toolTip">
+                   <string/>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                  </property>
+                  <property name="buttonSymbols">
+                   <enum>QAbstractSpinBox::UpDownArrows</enum>
+                  </property>
+                  <property name="maximum">
+                   <number>100</number>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="9" alignment="Qt::AlignHCenter">
+                 <widget class="QSpinBox" name="EdgeNumLabelStart">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="toolTip">
+                   <string/>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                  </property>
+                  <property name="buttonSymbols">
+                   <enum>QAbstractSpinBox::UpDownArrows</enum>
+                  </property>
+                  <property name="maximum">
+                   <number>100</number>
                   </property>
                  </widget>
                 </item>
@@ -2573,7 +2660,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>NumLabelCheckBox</sender>
+   <sender>NodeNumLabelCheckBox</sender>
    <signal>stateChanged(int)</signal>
    <receiver>dragMode_radioButton</receiver>
    <slot>click()</slot>
@@ -2733,7 +2820,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>NumLabelStart</sender>
+   <sender>NodeNumLabelStart</sender>
    <signal>valueChanged(int)</signal>
    <receiver>dragMode_radioButton</receiver>
    <slot>click()</slot>
